# AgentRouter-OS

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  ASSIGNMENT_B_STATUS.md  BRD.md  CHANGELOG.md  CLI_SPEC.md  CONTRIBUTING.md  EVALUATION_ACCEPTANCE.md  EVALUATION_HANDOFF.md  EVALUATION_STATUS.md  KNOWN_LIMITATIONS.md  LICENSE  LOOP_LOG.md  LOOP_STATE.json  MILESTONES.md  MODEL_REGISTRY_SCHEMA.md  PRD.md  PRODUCT_ACCEPTANCE.md  PRODUCT_MASTER_PLAN.md  PROVIDER_ADAPTER_SPEC.md  README.md  README_OPTIMIZED.md  RELEASE.md  RELEASE_READINESS.md  ROADMAP.md  ROUTING_RULES.md  SECURITY.md  TESTING.md  TODO.md  USER_GUIDE.md  command.md  llms.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml  security.yml
agentrouter/: __init__.py  classifier.py  cli.py  controls.py  dashboard.py  engine.py  evaluate.py  hosts.py  learning.py  plugins.py  prompts.py  refresh.py  registry.py  safety.py  schema.py  sdk.py  store.py  taxonomy.py
agentrouter/evaluation/: __init__.py  base.py  cli.py  comparison.py  grading.py  metrics.py  provenance.py  registry.py  reports.py  runner.py  sampling.py  schema.py
agentrouter/evaluation/adapters/: __init__.py  agentrouter_gold.py  banking77.py  clinc150.py  llmrouterbench.py  longbench_v2.py  massive.py  swebench.py  twinrouterbench.py
agentrouter/evaluation/evaluators/: __init__.py  feedback.py  performance.py  platform.py  provider.py  routing.py  safety.py
agentrouter/integrations/claude-code/agentrouter/: SKILL.md
agentrouter/integrations/codex/: AGENTS.md
agentrouter/seeds/: config.yaml  models.yaml  providers.yaml
agentrouter/server/: __init__.py  app.py  schemas.py  service.py
artifacts/baseline/: evaluation.json  evaluation.md  failures.csv
artifacts/evaluation/: baseline_failures_v0.4.0.csv  comparison.md  confusion_risk.csv  confusion_task_type.csv  evaluation.json  evaluation.md  failures.csv  improvements.csv  report.md  result.json  scorecard.json
benchmarks/: classifier_gold_v1.yaml  routing_gold_v1.yaml
docs/: API.md  EVALUATORS.md
evaluation/: README.md  dataset_manifest.yaml
evaluation/fixtures/: banking77_sample.jsonl  clinc150_sample.jsonl  llmrouterbench_sample.jsonl  longbench_v2_sample.jsonl  massive_sample.jsonl  swebench_sample.jsonl  twinrouterbench_sample.jsonl
examples/: README.md
integrations/: README.md
tests/: test_classifier_regression.py  test_cli_smoke.py  test_confidence.py  test_dashboard.py  test_evaluate.py  test_execute.py  test_execute_injection.py  test_fuzz_and_fallback.py  test_learning.py  test_model_catalog.py  test_mvp.py  test_plugins.py  test_refresh.py  test_registry_hygiene.py  test_route_controls.py  test_routing_benchmark.py  test_sdk.py  test_security_scan.py  test_server.py  test_setup.py  test_stats.py  test_taxonomy.py
tests/evaluation/: test_agentrouter_gold_adapter.py  test_dataset_registry.py  test_eval_schema.py  test_evaluate_cli.py  test_evaluators.py  test_grading.py  test_metrics.py  test_provenance.py  test_public_adapters.py  test_real_mode.py  test_reports_comparison.py  test_sampling.py
