[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentrouter-os"
version = "0.4.0"
description = "CLI-first AI task-routing planner: classifies a task and recommends the best model/tool, with explainable, logged decisions"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Krish Parekh" }]
requires-python = ">=3.10"
keywords = ["ai", "routing", "cli", "llm", "model-selection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["typer>=0.12", "pydantic>=2.5", "PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6", "build>=1.0"]
# Heavy evaluation deps — never required by the core runtime or CI-path tests.
# datasets pinned <4: v4+ dropped script-based loaders that CLINC/BANKING77/MASSIVE still use.
eval = ["datasets>=2.14,<4.0", "pandas>=2.0", "scikit-learn>=1.3"]
property = ["hypothesis>=6.90"]
security = ["bandit>=1.7", "pip-audit>=2.7"]
benchmark = ["pytest-benchmark>=4.0"]
mutation = ["mutmut>=2.4"]
ops = ["dvc>=3.0", "mlflow>=2.9"]
# Local REST API surface (Phase P7). FastAPI's test client + SDK use httpx.
server = ["fastapi>=0.110", "uvicorn>=0.29", "httpx>=0.27"]
all-eval = [
    "datasets>=2.14", "pandas>=2.0", "scikit-learn>=1.3",
    "hypothesis>=6.90", "bandit>=1.7", "pip-audit>=2.7",
    "pytest-benchmark>=4.0", "mutmut>=2.4", "dvc>=3.0", "mlflow>=2.9",
]

[project.urls]
Homepage = "https://github.com/krish17kp/AgentRouter-OS"
Issues = "https://github.com/krish17kp/AgentRouter-OS/issues"

[project.scripts]
agentrouter = "agentrouter.cli:app"

[tool.setuptools.packages.find]
include = ["agentrouter*"]

[tool.setuptools.package-data]
agentrouter = ["seeds/*.yaml", "integrations/**/*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "B008",   # Typer's Option/Argument defaults are calls by design
    "UP042",  # keep (str, Enum): StrEnum changes str(member) semantics for no functional gain
]

[tool.bandit]
# B404 is an informational "you imported subprocess" note; the actual call sites
# are argv-based (shell=False) and carry justified `# nosec B603` markers.
skips = ["B404"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: isolated unit test",
    "integration: cross-component test",
    "cli: exercises the Typer CLI",
    "evaluation: evaluation framework test",
    "dataset: dataset adapter test",
    "security: security / injection test",
    "property: Hypothesis property test",
    "benchmark: pytest-benchmark performance test",
    "slow: long-running test",
    "network: requires network (never in default CI)",
    "docker: requires Docker (never in default CI)",
    "live: hits a live provider (manual only)",
]

[tool.coverage.run]
source = ["agentrouter"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
